--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/tutorial/query-api.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/tutorial/query-api.adoc
@@ -1,7 +1,38 @@
 = Using Queries Programmatically
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 ifndef::rootdir[:rootdir: ../]
-:imagesdir: {rootdir}
+:imagesdir: {rootdir}/images
+
+VIATRA Query provides an API to execute queries on various models, including support for listening to match set changes. However, as the incremental evaluation relies on indexes, the API also covers lifecycle management for the runtime. The central element of the API is the Query Engine that is responsible for loading query specifications, setting up indexes and providing match results. This approach is supported by code generators that create a runtime representation for graph patterns and provide a type-safe API to access VIATRA code.
+
+.Overview of the runtime components of VIATRA Query
+image::query_runtime.png[]
+
+To start working with the VIATRA Query API, we have to provide (1) a Scope representing the model and a (2) set of query specifications. The easiest way to initialize a scope, is to simply wrap an EMF ResourceSet inside a new EMFScope instace. For query specifications, the generated matcher classes can be used as an example, see as follows.
+
+[[app-listing]]
+[source,java]
+----
+// Load model as usual
+ResourceSet resourceSet = ...;
+// Initialize scope
+EMFScope scope = new EMFScope(resourceSet);
+// Initialize a managed query engine (will be disposed when the model is unloaded)
+ViatraQueryEngine queryEngine = ViatraQueryEngineManager.getInstance().getQueryEngine(scope);
+// Create a pattern matcher
+HostIpAddressMatcher matcher = HostIpAddressMatcher.on(queryEngine);
+// Collect all matches
+Collection<HostIpAddressMatch> matches = matcher.getAllMatches();
+// Process the found matches
+for (HostIpAddressMatch match : matches) {
+	System.out.println(match); // Application-specific
+}
+----
+
+In general, the generated code in a VIATRA Query project consists of a (1) query specification classes that represents the original VQL specifications for the runtime API, (2) a Match and Matcher class for each pattern definition (recommended for general usage) and (3) a group class for each file that can be used to initialize all queries together.
+
+.Structure of the query generated code
+image::query_generated_code.png[]
 
 == Managed Engine
 
